--- a/3.md
+++ b/3.md
@@ -10,7 +10,7 @@ function calcularIMC(altura, peso) {
 }
 ```
 
-2.Crea una función que calcule el valor del factorial de un número pasado como parámetro.
+2.Crea una función que calcule el valor del factorial de un número pasado como parámetro..
 
 ```javascript
 function calcularFactorial(numero) {
