--- a/3.md
+++ b/3.md
@@ -42,7 +42,7 @@ console.log(`${valorEnDolar} dólares  es R$ ${valorEnReales}`);
 
 ```
 
-4.Crea una función que muestre en pantalla el área y el perímetro de una sala rectangular, utilizando la altura y la anchura que se proporcionarán como parámetros.
+4.Crea una función que muestre en pantalla el área y el perímetro de una sala rectangular, utilizando la altura y la anchura que se proporcionarán como parámetros.,
 
 ```js
 function calcularAreaYPerimetroRectangular(altura, anchura) {
